<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d2edc5"
            android:text="@string/angka0"
            android:gravity="right|center_vertical"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/ce"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/c"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonBACK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/back"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/operatorbagi"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka7"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka8"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka9"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonMultiple"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/operatorkali"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka4"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka5"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka6"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/operatorkurang"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka1"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka2"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka3"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/operatortambah"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPlusMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/plusminus"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/angka0"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonComa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/koma"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonCal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.25"
            android:background="#c7c7c7"
            android:text="@string/samadengan"
            android:textSize="40sp" />

    </LinearLayout>
</LinearLayout>